--- a/index.html
+++ b/index.html
@@ -80,7 +80,17 @@
     }
     </script>
     <!-- End Meta Pixel Code -->
-    
+
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "tf2fjljjt0");
+    </script>
+    <!-- End Microsoft Clarity -->
+
     <!-- Preload Critical Resources -->
     <link rel="preload" href="/assets/Apple_AirTag-DXsKpCuU.svg" as="image" type="image/svg+xml" />
     
